--- a/application.yml
+++ b/application.yml
@@ -6,5 +6,9 @@ eureka:
 ----
 spring:
   profiles: demo3-verb
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8010/eureka/ 
 words: ran,knew,had,saw,bought
   
