--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/ 
 
-
+spring:
+  profiles: verb
 words: ran,knew,had,saw,bought
   
