--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,6 @@ eureka:
       defaultZone: http://localhost:8010/eureka/ 
 
 spring:
-  profiles: verb
+  profiles: demo3-verb
 words: ran,knew,had,saw,bought
   
