--- a/application.yml
+++ b/application.yml
@@ -5,5 +5,10 @@ eureka:
 ---
 spring:
   profiles: demo3-verb
-    words: ran,knew,had,saw,bought
+words: ran,knew,had,saw,bought
+
+---
+spring:
+  profiles: demo3-noun
+words: boat,book,vote,seat,backpack,partition,groundhog
   
