--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,6 @@
+spring:
+  profiles: demo3-verb
+
 eureka:
   client:
     serviceUrl:
@@ -5,5 +8,14 @@ eureka:
 
 words: ran,knew,had,saw,bought
 
-
+---
   
+spring:
+  profiles: demo3-noun
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8010/eureka/ 
+
+words: boat,book,vote,seat,backpack,partition,groundhog
