--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,8 @@
-
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8010/eureka/ 
+---
 spring:
   profiles: demo3-verb
 words: ran,knew,had,saw,bought
